--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
     />
     <link
       rel="preconnect"
@@ -24,7 +23,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite + React + TS</title>
+    <title>Rahmat Adi Santoso's Website</title>
   </head>
   <body>
     <div id="root"></div>
